tests/regression/errors/basic/type_error_1.csd
// Type error test 1
sus number drip = 1
sus text tea = "string_1"
sus wrong drip = text  // Type mismatch
vibez.spill("Type error 1:", wrong)
